# django-fullstack

./: MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-labeler.yml  run_tests.yml  testing.yml
django_fullstack/: __init__.py  __main__.py  apps.py  middleware.py  settings.py  urls.py  views.py
django_fullstack/core/management/: __init__.py
django_fullstack/core/management/commands/: _remove-app.py  create-app.py  startapp.py  startproject.py
django_fullstack/django_vite/: __init__.py  apps.py
django_fullstack/django_vite/core/: asset_loader.py  exceptions.py  tag_generator.py
django_fullstack/django_vite/templatetags/: django_vite.py
django_fullstack/inertia/: http.py  middleware.py  settings.py
django_fullstack/inertia/templates/: inertia.html  inertia_ssr.html
django_fullstack/inertia/tests/: test_encoder.py  test_middleware.py  test_rendering.py  test_settings.py  test_ssr.py  test_tests.py
django_fullstack/scripts/: django_fullstack.py
django_fullstack/templates/react/: package.json  vite.config.js
django_fullstack/templates/react/src/: index.css  index.html
django_fullstack/templates/react/src/Layout/: Fullstack.jsx  test.txt
django_fullstack/templates/react/src/pages/: index.jsx
django_fullstack/templates/react_typescript/: package.json
django_fullstack/templates/react_typescript/src/: index.css  index.html
django_fullstack/templates/react_typescript/src/Layout/: Fullstack.tsx
django_fullstack/templates/react_typescript/src/pages/: index.tsx
django_fullstack/templates/vue/: package.json
django_fullstack/templates/vue/src/: index.html
django_fullstack/templates/vue/src/components/: DjangoFooter.vue  DjangoHeader.vue  DjangoMain.vue
django_fullstack/templates/vue/src/pages/: index.vue
django_fullstack/templates/vue3/src/: index.html
django_fullstack/templates/vue3_typescript/src/: index.html
django_fullstack/templates/vue_typescript/: package.json
django_fullstack/templates/vue_typescript/src/: index.css  index.html
django_fullstack/templatetags/: django_vite.py  plugin.py
tests/: package-lock.json  test_django_fullstack.py
tests/src/components/: DjangoHeader.vue
tests/src/pages/: index.vue
tests/web/: asgi.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
