[tool.poetry]
name = "django-fullstack"
version = "0.5.0"
description = "make your project frontend + django with django-fullstack, it's so easy"
license = "MIT"
authors = ["Raja Sunrise <rajasunsrise@gmail.com>"]
repository = "https://github.com/rajasunrise/django-fullstack"
packages = [{include = "django_fullstack"}]
keywords = ["django-fullstack", "react", "vitejs", "vue", "django"]
readme = "README.md"

classifiers=[
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Framework :: Django :: 4.0",
        "Framework :: Django :: 4.1",
        "Framework :: Django :: 4.2",
        "Framework :: Django :: 5.0",
        "Topic :: Utilities",
    ]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.0, <=6.0"
requests = ">=2.28.2, <2.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
django-fullstack = "django_fullstack.scripts.django_fullstack:run"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    ]
build-backend = "poetry.core.masonry.api"
