[project]
name = "django-fullstack"
version = "0.5.0"
description = "make your project frontend + django with django-fullstack, it's so easy"
license = "MIT"
authors = [{ name = "Raja Sunrise", email = "rajasunsrise@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9, <3.13"
keywords = ["django-fullstack", "react", "vitejs", "vue", "django"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=3.0,<=6.0",
    "requests>=2.28.2,<2.40.0",
    "inertia-django>=0.5.0,<0.8.0",
    "django-vite>=2.1.0,<4.1.0",
]

[project.scripts]
django-fullstack = "django_fullstack.scripts.django_fullstack:run"

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
